WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290093
[GTK][WPE] Fix clang-20 warnings
https://bugs.webkit.org/show_bug.cgi?id=290093
Summary
[GTK][WPE] Fix clang-20 warnings
Philippe Normand
Reported
2025-03-20 03:19:31 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-03-20 03:34:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42740
EWS
Comment 2
2025-03-20 05:44:23 PDT
Committed
292414@main
(3218ea36c229): <
https://commits.webkit.org/292414@main
> Reviewed commits have been landed. Closing PR #42740 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug