[GTK][WPE] Fix clang-20 warnings https://bugs.webkit.org/show_bug.cgi?id=290093

Reviewed by Michael Catanzaro.

Fix unused-private-field warnings raised by clang-20.

* Source/WebCore/Modules/webcodecs/WebCodecsAudioEncoder.h:
* Source/WebCore/html/MediaElementSession.h:
* Source/WebKit/UIProcess/API/APIProcessPoolConfiguration.h:

Canonical link: https://commits.webkit.org/292414@main